[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/hazards/projectile_shooter3.png" type="Texture" id=1]
[ext_resource path="res://assets/hazards/projectile_shooter4.png" type="Texture" id=2]
[ext_resource path="res://assets/hazards/projectile_shooter2.png" type="Texture" id=3]
[ext_resource path="res://assets/hazards/projectile_shooter6.png" type="Texture" id=4]
[ext_resource path="res://assets/hazards/projectile_shooter5.png" type="Texture" id=5]
[ext_resource path="res://assets/hazards/projectile_shooter1.png" type="Texture" id=6]
[ext_resource path="res://map_making_scenes/hazards/projectile_shooter_left.gd" type="Script" id=7]
[ext_resource path="res://map_making_scenes/hazards/laser_bullet_right.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="projectile_shooter_left" type="Node2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 11, 0 )
rotation = -3.14159
frames = SubResource( 1 )
frame = 5
playing = true

[node name="laser_bullet_right" parent="." instance=ExtResource( 8 )]
position = Vector2( 25, 0 )
rotation = 1.57079

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 2.725
one_shot = true

[connection signal="timeout" from="bullet_timer" to="." method="_on_bullet_timer_timeout"]
